--- a/template/base.html
+++ b/template/base.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="styleheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    {% extends 'base.html' %}
-
-    {% block title %}
-index
-{% endblock %}
+    
 </body>
 </html>
